--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.3",
     "react-addons-test-utils": "^15.5.1",
